reducing ingesetion latency & adding the diagrsms generation feature
